@@ -1,3 +1,6 @@
+2013-04-22 c-0-1-17
+  (add) RPi Keyboard Layout support
+  
 2013-04-20 v-0.1.16
   (change) optimize update thread
   
